Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-72051

qdistancefieldgenerator: Crash when doing selections without font file loaded

    XMLWordPrintable

Details

    • f34661999aaf09920b46e5789a578cb81ebb0c6d (qt/qttools/5.12)

    Description

      qdistancefieldgenerator crashes when pressing "Ctrl+A" right after launch (without any font file open).

      It also crashes in the same setup when accepting in the "Select glypths for string" dialog.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kkohne Kai Köhne
            kkohne Kai Köhne
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes