distancefieldgenerator: Fix crash in select actions for empty document

Fixes: QTBUG-72051
Change-Id: Ib3862f8d592bcab54ee72cc87c4e7dbc213f1e87
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@qt.io>